# cnn-doordash

./: .gitignore  README.md  cnn.ipynb  pyproject.toml  restaurantmenuchanges.csv  train.py
cnn_doordash/: __init__.py  data.py  model.py
